# c0compiler

./: .gitignore  CMakeLists.txt  srcCount.sh
compiler/: CMakeLists.txt
compiler/include/: AST.h  Block.h  DAG.h  LifeTimeRegisterAllocator.h  MIPS.h  MIPSoptimizer.h  RegisterAllocator.h  TAC.h  TACoptimizer.h  base.h  config.h  generator.h  parse.h  scan.h  symbol.h  token.h
compiler/src/: AST.cpp  Block.cpp  DAG.cpp  LifeTimeRegisterAllocator.cpp  MIPS.cpp  (+9 more)
compiler_test/: CMakeLists.txt
compiler_test/IntegrationTesting/: aplusb  fib  helloworld
compiler_test/resources/generator/: Makefile  compiler-v0.1  tacJSON2TAC.py
compiler_test/resources/generator/c0/: getLifeTime.c0
compiler_test/resources/generator/json/: test.json
compiler_test/resources/generator/py/: test.py
compiler_test/resources/generator/py/TAC/: TAC.py
compiler_test/resources/parse/: Makefile  README.md  txt2token.py
compiler_test/resources/parse/SymbolTable/: init
compiler_test/resources/parse/py/: ASTCall.py  ASTCondition.py  ASTDeclareArray.py  ASTDeclareFun.py  ASTDeclareValue.py  ASTDoubleCondition.py  ASTExpression.py  ASTLeaf.py  ASTLoop.py  ASTRead.py  ASTSwitch.py  ASTWrite.py  TACCall.py  TACCondition.py  TACDeclareArray.py  TACDeclareFun.py  TACDeclareValue.py  TACDoubleCondition.py  TACExpression.py  TACLeaf.py  TACLoop.py  TACRead.py  TACSwitch.py  TACWrite.py  addString.py  aplusb.py  assign.py  assignConst.py  assignExpression.py  boolErrorAdd.py  boolErrorArray.py  boolErrorAssign.py  boolErrorMinus.py  boolErrorMul.py  boolRet.py  boolean.py  callLessArg.py  callMoreArg.py  callfun.py  compoundStatements1.py  (+37 more)
compiler_test/resources/parse/py/AST/: AST.py  declares.py
compiler_test/resources/parse/py/TAC/: TAC.py
compiler_test/resources/parse/txt/: assign.txt  boolean.txt  callfun.txt  cmpOp.txt  compoundStatements1.txt  compoundStatements2.txt  compoundStatements3.txt  compoundStatements4.txt  compoundStatements5.txt  condition.txt  constDeclare.txt  expression.txt  fun.txt  funDeclare.txt  integer.txt  loop.txt  program1.txt  read.txt  return.txt  statement.txt  switch.txt  valueDeclare.txt  write.txt
compiler_test/resources/scan/: bool.in  bool.out  char.in  char.out  charDeath.in  cmpOp.in  cmpOp.out  id.in  id.out  keywords.in  keywords.out  number.in  number.out  single.in  single.out  string.in  string.out  stringMultiLineDeath.in
compiler_test/tests/: test.h  testAST.cpp  testBlock.cpp  testLifeTimeRegisterAllocator.cpp  testMIPS.cpp  testMIPSOptimizer.cpp  testSymbol.cpp  testconfig.cpp  testparse.cpp  testscan.cpp
design/: TAC.md  main.md
(+34 files in other folders)
